--- a/proj-solns/storm/word-count/pom.xml
+++ b/proj-solns/storm/word-count/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>hwu.realtime</groupId>
-    <artifactId>simple-storm</artifactId>
+    <artifactId>word-count</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -30,7 +30,7 @@
     <dependencies>
 
         <!-- Logging dependencies needed for local mode -->
-
+        <!--
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
@@ -46,7 +46,7 @@
             <artifactId>commons-logging</artifactId>
             <version>1.1.3</version>
         </dependency>
-
+        -->
         <!-- End of Logging -->
 
 
@@ -54,9 +54,9 @@
             <groupId>org.apache.storm</groupId>
             <artifactId>storm-core</artifactId>
             <version>${storm.version}</version>
-            <!-- <scope>provided</scope>   avail in cluster mode, but tag needs to be commented out for local -->
+            <scope>provided</scope> <!--   avail in cluster mode, but tag needs to be commented out for local -->
             <!-- exclusions needed for running in local mode -->
-
+            <!--
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -87,7 +87,7 @@
                     <artifactId>log4j-slf4j-impl</artifactId>
                 </exclusion>
             </exclusions>
-
+            -->
         </dependency>
 
         <dependency>
