--- a/proj-solns/storm/kafka-word-count/pom.xml
+++ b/proj-solns/storm/kafka-word-count/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>hwu.realtime</groupId>
-    <artifactId>storm-word-count</artifactId>
+    <artifactId>storm-kafka-word-count</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -30,7 +30,6 @@
     <dependencies>
 
         <!-- Logging dependencies needed for local mode -->
-        <!--
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
@@ -48,7 +47,6 @@
             <artifactId>commons-logging</artifactId>
             <version>1.1.3</version>
         </dependency>
-        -->
         <!-- End of Logging -->
 
 
@@ -56,9 +54,8 @@
             <groupId>org.apache.storm</groupId>
             <artifactId>storm-core</artifactId>
             <version>${storm.version}</version>
-            <scope>provided</scope> <!--  avail in cluster mode, but tag needs to be commented out for local -->
+            <!-- <scope>provided</scope>  avail in cluster mode, but tag needs to be commented out for local -->
             <!-- exclusions needed for running in local mode -->
-            <!--
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -89,7 +86,6 @@
                     <artifactId>log4j-slf4j-impl</artifactId>
                 </exclusion>
             </exclusions>
-            -->
         </dependency>
 
         <dependency>
