--- a/proj-solns/storm/workshop/pom.xml
+++ b/proj-solns/storm/workshop/pom.xml
@@ -38,7 +38,7 @@
         </dependency>
 
         <!-- Logging dependencies needed for local mode -->
-
+        <!--
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
@@ -56,7 +56,7 @@
             <artifactId>commons-logging</artifactId>
             <version>1.1.3</version>
         </dependency>
-
+        -->
         <!-- End of Logging -->
 
 
@@ -64,8 +64,9 @@
             <groupId>org.apache.storm</groupId>
             <artifactId>storm-core</artifactId>
             <version>${storm.version}</version>
-            <!-- <scope>provided</scope>  avail in cluster mode, but tag needs to be commented out for local -->
+            <scope>provided</scope> <!--  avail in cluster mode, but tag needs to be commented out for local -->
             <!-- exclusions needed for running in local mode -->
+            <!--
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -96,7 +97,7 @@
                     <artifactId>log4j-slf4j-impl</artifactId>
                 </exclusion>
             </exclusions>
-
+            -->
         </dependency>
 
         <dependency>
