--- a/proj-solns/storm/kafka-word-count/pom.xml
+++ b/proj-solns/storm/kafka-word-count/pom.xml
@@ -9,9 +9,9 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <storm.version>1.0.1.2.5.3.0-37</storm.version>
-        <kafka.version>0.10.0.2.5.3.0-37</kafka.version>
-        <zookeeper.version>3.4.6.2.5.3.0-37</zookeeper.version>
+        <storm.version>1.1.0.2.6.0.3-8</storm.version>
+        <kafka.version>0.10.0.2.6.0.0-598</kafka.version>
+        <zookeeper.version>3.4.6.2.6.0.3-8</zookeeper.version>
         <log4j2.version>2.1</log4j2.version>
     </properties>
 
@@ -98,6 +98,12 @@
             <groupId>org.apache.storm</groupId>
             <artifactId>storm-kafka</artifactId>
             <version>${storm.version}</version>
+            <exclusions>
+            	<exclusion>
+            		<groupId>org.apache.kafka</groupId>
+            		<artifactId>kafka-clients</artifactId>
+            	</exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -106,6 +112,11 @@
             <version>${storm.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>${kafka.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.kafka</groupId>
