--- a/proj-solns/storm/workshop/pom.xml
+++ b/proj-solns/storm/workshop/pom.xml
@@ -9,20 +9,27 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <storm.version>1.1.0.2.6.0.3-8</storm.version>
-        <kafka.version>0.10.0.2.6.0.0-598</kafka.version>
-        <zookeeper.version>3.4.6.2.6.0.3-8</zookeeper.version>
-        <log4j2.version>2.1</log4j2.version>
+        <storm.version>1.2.1.3.1.0.0-78</storm.version>
+        <kafka.version>2.0.0.3.1.0.0-78</kafka.version>
+        <zookeeper.version>3.4.6.3.1.0.0-78</zookeeper.version>
+        <log4j2.version>2.8.2</log4j2.version>
     </properties>
 
     <repositories>
         <repository>
-            <id>hortonworks</id>
-            <url>http://repo.hortonworks.com/content/repositories/releases/</url>
+            <id>central</id>
+            <url>http://repo1.maven.org/maven2</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </repository>
         <repository>
-            <id>hortonworks-nonhdp</id>
-            <url>http://repo.hortonworks.com/content/groups/public/</url>
+            <id>hortonworks.repo</id>
+            <url>http://repo.hortonworks.com/content/repositories/releases</url>
+            <name>Hortonworks Repo</name>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </repository>
     </repositories>
 
@@ -130,19 +137,6 @@
                 <exclusion>
                     <groupId>org.apache.zookeeper</groupId>
                     <artifactId>zookeeper</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <!-- see https://community.hortonworks.com/questions/61133/issue-with-storm-kafka-spout.html -->
-        <dependency>
-            <groupId>org.apache.curator</groupId>
-            <artifactId>curator-framework</artifactId>
-            <version>2.10.0</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>log4j</groupId>
-                    <artifactId>log4j</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
