--- a/projects/storm/workshop/pom.xml
+++ b/projects/storm/workshop/pom.xml
@@ -9,36 +9,34 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <storm.version>1.1.0.2.6.0.3-8</storm.version>
-        <kafka.version>0.10.0.2.6.0.0-598</kafka.version>
-        <zookeeper.version>3.4.6.2.6.0.3-8</zookeeper.version>
-        <log4j2.version>2.1</log4j2.version>
+        <storm.version>1.2.1.3.1.0.0-78</storm.version>
+        <kafka.version>2.0.0.3.1.0.0-78</kafka.version>
+        <zookeeper.version>3.4.6.3.1.0.0-78</zookeeper.version>
+        <log4j2.version>2.8.2</log4j2.version>
     </properties>
 
     <repositories>
         <repository>
-            <id>hortonworks</id>
-            <url>http://repo.hortonworks.com/content/repositories/releases/</url>
+            <id>central</id>
+            <url>http://repo1.maven.org/maven2</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </repository>
         <repository>
-            <id>hortonworks-nonhdp</id>
-            <url>http://repo.hortonworks.com/content/groups/public/</url>
+            <id>hortonworks.repo</id>
+            <url>http://repo.hortonworks.com/content/repositories/releases</url>
+            <name>Hortonworks Repo</name>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </repository>
     </repositories>
 
 
     <dependencies>
 
-        <!-- see https://martin.atlassian.net/wiki/x/JbXqBQ -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>log4j-over-slf4j</artifactId>
-            <version>1.7.21</version>
-            <scope>compile</scope>
-        </dependency>
-
         <!-- Logging dependencies needed for local mode -->
-        
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
@@ -56,7 +54,6 @@
             <artifactId>commons-logging</artifactId>
             <version>1.1.3</version>
         </dependency>
-        
         <!-- End of Logging -->
 
 
@@ -64,9 +61,8 @@
             <groupId>org.apache.storm</groupId>
             <artifactId>storm-core</artifactId>
             <version>${storm.version}</version>
-            <!-- <scope>provided</scope>   avail in cluster mode, but tag needs to be commented out for local -->
+            <!-- <scope>provided</scope>  avail in cluster mode, but tag needs to be commented out for local -->
             <!-- exclusions needed for running in local mode -->
-            
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -97,7 +93,6 @@
                     <artifactId>log4j-slf4j-impl</artifactId>
                 </exclusion>
             </exclusions>
-            
         </dependency>
 
         <dependency>
@@ -111,10 +106,10 @@
             <artifactId>storm-kafka</artifactId>
             <version>${storm.version}</version>
             <exclusions>
-            	<exclusion>
-            		<groupId>org.apache.kafka</groupId>
-            		<artifactId>kafka-clients</artifactId>
-            	</exclusion>
+                <exclusion>
+                    <groupId>org.apache.kafka</groupId>
+                    <artifactId>kafka-clients</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 
@@ -142,19 +137,6 @@
                 <exclusion>
                     <groupId>org.apache.zookeeper</groupId>
                     <artifactId>zookeeper</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <!-- see https://community.hortonworks.com/questions/61133/issue-with-storm-kafka-spout.html -->
-        <dependency>
-            <groupId>org.apache.curator</groupId>
-            <artifactId>curator-framework</artifactId>
-            <version>2.10.0</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>log4j</groupId>
-                    <artifactId>log4j</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
