--- a/proj-solns/storm/kafka-word-count/pom.xml
+++ b/proj-solns/storm/kafka-word-count/pom.xml
@@ -95,15 +95,17 @@
             </exclusions>
         </dependency>
 
+        <!--
         <dependency>
             <groupId>org.apache.storm</groupId>
             <artifactId>storm-hdfs</artifactId>
             <version>${storm.version}</version>
         </dependency>
+        -->
 
         <dependency>
             <groupId>org.apache.storm</groupId>
-            <artifactId>storm-kafka</artifactId>
+            <artifactId>storm-kafka-client</artifactId>
             <version>${storm.version}</version>
             <exclusions>
                 <exclusion>
